--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "sqlalchemy>=2.0.37",
     "uvicorn>=0.34.0",
     "xgboost>=2.1.3",
+    "imbalanced-learn>=0.12",
+    "lightgbm>=3.0.0", 
+    "optuna>=3.0.0", 
 ]
 
 
