--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
-name = "dsba"
+name = "adclick"
 version = "0.1.0"
-description = "A toy MLOps Platform for educational purposes"
+description = "An MLOps Platform for adclick prediction"
 readme = "README.md"
 requires-python = ">=3.12"
 license = "MIT"
-authors = [{ name = "Joachim", email = "joachim@joachim.website" }]
+authors = [{ name = "Auriane, Emma, Elrich, Solène", email = "solene.leboucher@gmail.com"}]
 
 
 dependencies = [
@@ -37,6 +37,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
 # -------------------------------------------------------------------------------------
 
 
@@ -101,3 +103,4 @@ exclude = []
 [tool.mypy]
 python_version = "3.12"
 strict = true
+
